# winrt-setup

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: CPM.cmake
docs/: README.md
docs/architecture/: development-roadmap.md  overview.md  project-structure.md
docs/getting-started/: build-and-run.md
docs/reference/: keyboard-shortcuts.md  shaders.md
res/shaders/: infinite_grid.frag  infinite_grid.vert  skydome.frag  skydome.vert  world.vert
src/app/: app_types.cpp  app_types.h  application.cpp  application.h  main.cpp
src/event/: input.h
src/platform/: winrt_info.cpp  winrt_info.h
src/render/: gl_api.cpp  gl_api.h  infinite_grid_renderer.cpp  infinite_grid_renderer.h  shader_program.cpp  shader_program.h  skydome_renderer.cpp  skydome_renderer.h  world_renderer.cpp  world_renderer.h
src/style/: ui_style.cpp  ui_style.h
src/ui/: container_blur.cpp  container_blur.h  svg_icon_cache.cpp  svg_icon_cache.h  workspace_model.cpp  workspace_model.h  workspace_widgets.cpp  workspace_widgets.h
src/utils/: math3d.h
src/world/: orbit_camera.cpp  orbit_camera.h  world_scene.cpp  world_scene.h
